# opengl-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
engine/: CMakeLists.txt
engine/shaders/coords/: vertexShader.glsl
engine/shaders/model/: model.frag  model.vert
engine/shaders/perspective/: perspective.frag  perspective.vert
engine/shaders/simple/: simple.vert
engine/shaders/terrain/: fragmentShader.glsl  terrain.frag  terrain.tesc  terrain.tese  terrain.vert  vertexShader.glsl
engine/shaders/text/: text.frag
engine/shaders/vectors/: vectors.frag  vectors.vert
engine/src/: engine.cpp  engine.cppm  window.cppm
engine/src/camera/: camera.cpp  camera.cppm
engine/src/camera/first-person/: first_person_camera.cpp  first_person_camera.cppm
engine/src/camera/top-down/: top_down_camera.cpp  top_down_camera.cppm
engine/src/collisions/: collisions.cpp  collisions.cppm
engine/src/entity/: entity.cpp  entity.cppm
engine/src/entity/player/: player.cpp  player.cppm
engine/src/exception/: exception.cpp  exception.cppm
engine/src/font/: font.cpp  font.cppm
engine/src/lighting/: lighting.cppm
engine/src/physics/collisions/: collisions.cpp  collisions.cppm
engine/src/physics/gravity/: gravity.cpp  gravity.cppm
engine/src/renderable/: Renderable.cppm  renderable.cppm
engine/src/renderable/light/: light.cpp  light.cppm
engine/src/renderable/model/: model.cpp  model.cppm
engine/src/renderable/model/mesh/: mesh.cpp  mesh.cppm
engine/src/renderable/points/: points.cpp  points.cppm
engine/src/renderable/terrain/: terrain.cpp  terrain.cppm
engine/src/renderable/text/: text.cpp  text.cppm
engine/src/renderable/vectors/: vectors.cpp  vectors.cppm
engine/src/renderer/: renderer.cppm
engine/src/renderer/model/: model_renderer.cpp  model_renderer.cppm
engine/src/renderer/perspective/: perspective.cpp  perspective.cppm
engine/src/shader/: shader.cpp  shader.cppm
engine/src/texture/: texture.cpp  texture.cppm
engine/src/utils/: utils.cpp  utils.cppm
engine/src/window/: window.cpp  window.cppm
game/: CMakeLists.txt  game.cpp  game.cppm  game.h
